# dynworker

./: .gitignore  CONSTELLATION.md  MANIFEST.json  README.md  bootstrap.sh  install.sh
api/: package.json  pnpm-lock.yaml
api/src/: engine-node.js  engine.js  index.js  server.js  store.js
api/tests/: server.test.js
engine/: Cargo.toml
engine/src/: ipc.rs  lib.rs  main.rs  network.rs  registry.rs  sandbox.rs  types.rs
examples/hello-worker/: hello.wasm  hello.wat  run.js
sdk/: package.json
sdk/src/: client.js  index.js
