[package]
name = "dynworker-engine"
version = "0.1.0"
edition = "2021"
description = "Core WebAssembly sandbox engine for DynWorker"

[[bin]]
name = "dynworker-engine"
path = "src/main.rs"

[lib]
name = "dynworker_engine"
path = "src/lib.rs"

[dependencies]
wasmtime = { version = "28", features = ["async", "cranelift", "pooling-allocator"] }
wasmtime-wasi = { version = "28" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
